@@ -1,5 +1,10 @@
 Changes with Apache 2.0.50
 
+  *) Fix the comment delimiter in htdbm so that it correctly parses the 
+     username comment.  Also add a terminate function to allow NetWare 
+     to pause the output before the screen is destroyed.
+     [Guenter Knauf <eflash gmx.net>, Brad Nicholes] 
+  
   *) Fix crash when Apache was started with no Listen directives.
      [Michael Corcoran <mcorcoran warpsolutions.com>]
 
